# report-news

./: .env.example  .gitignore  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily_report.yml
.serena/: project.yml
config/: tools.yaml
docs/: index.html
docs/reports/: 2025-12-24_en.html  2025-12-24_ja.html  2025-12-25_en.html  2025-12-25_ja.html  2025-12-26_en.html  2025-12-26_ja.html  2025-12-27_en.html  2025-12-27_ja.html  2025-12-28_en.html  2025-12-28_ja.html  2025-12-29_en.html  2025-12-29_ja.html  2025-12-30_en.html  2025-12-30_ja.html  2025-12-31_en.html  2025-12-31_ja.html  2026-01-01_en.html  2026-01-01_ja.html  2026-01-02_en.html  2026-01-02_ja.html  2026-01-03_en.html  2026-01-03_ja.html  2026-01-04_en.html  2026-01-04_ja.html  2026-01-05_en.html  2026-01-05_ja.html  2026-01-07_en.html  2026-01-07_ja.html  2026-01-08_en.html  2026-01-08_ja.html  2026-01-09_en.html  2026-01-09_ja.html  2026-01-10_en.html  2026-01-10_ja.html  2026-01-11_en.html  2026-01-11_ja.html  2026-01-12_en.html  2026-01-12_ja.html  2026-01-13_en.html  2026-01-13_ja.html  (+32 more)
src/collector/: gemini_search.py
src/models/: news_item.py
src/publisher/: html_generator.py
src/summarizer/: claude_summarizer.py
templates/: report.html
